<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondAnimActivity">

    <TextView
        android:id="@+id/secondHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="21sp"
        android:textStyle="bold"
        android:text="@string/header_second_activity"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/min_scale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/bttn_min_scale"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/max_scale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/bttn_max_scale"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/half_scale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/bttn_half_scale"
            />

    </LinearLayout>

    <com.github.piasy.biv.view.BigImageView
        android:id="@+id/sourceView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:transitionName="@string/transition_name"
        android:contentDescription="@string/content_desc_source"
        app:thumbnailScaleType="fitStart"
        app:thumbnailAdjustViewBounds="true"
        />

</LinearLayout>